fix broken links and update scrollbar style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -315,8 +315,8 @@ b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a,
 }
 
 html::-webkit-scrollbar {
-  width: 25px;
-  height: 25px
+  width: 10px;
+  height: 10px;
 }
 
 html::-webkit-scrollbar-thumb {
